--- a/graphics/scatter-plot/index.html
+++ b/graphics/scatter-plot/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <script src="https://vega.github.io/dataflow-api/dataflow-api.v0.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title></title>
