--- a/graphics/scatter-plot/index.html
+++ b/graphics/scatter-plot/index.html
@@ -2,15 +2,27 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://vega.github.io/dataflow-api/dataflow-api.v0.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="helper-script.js"></script>
     <title></title>
   </head>
   <body>
-    <h1>Some scatterplot</h1>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="script.js"></script>
+    <div class="outer-container">
+      <h1>Some scatterplot</h1>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      <div class="inner-container">
+        <div id='wrapper' class="wrapper">
+          <span class='toggle-text'>Overall</span>
+          <input type="checkbox" id="switch" onclick="reveal()" /><label for="switch">Toggle</label>
+          <span class='toggle-text'>Per canton</span>
+          <select id='drop-down' onchange="changeEventHandler(event);"></select>
+        </div>
+        <script src="script.js"></script>
+      </div>
+    </div>
   </body>
 </html>
