--- a/graphics/scatter-plot/index.html
+++ b/graphics/scatter-plot/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="outer-container">
-      <h1>Some scatterplot</h1>
+      <h1>Candidate Twitter Scores</h1>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
       <div class="inner-container">
         <div id='wrapper' class="wrapper">
