--- a/graphics/scatter-plot/index.html
+++ b/graphics/scatter-plot/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="helper-script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <title></title>
   </head>
   <body>
@@ -22,6 +24,11 @@
           <select id='drop-down' onchange="changeEventHandler(event);"></select>
         </div>
         <script src="script.js"></script>
+        <div id="meta-panel">
+          <!--
+          <a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        -->
+        </div>
       </div>
     </div>
   </body>
