--- a/graphics/scatter-plot/index.html
+++ b/graphics/scatter-plot/index.html
@@ -25,6 +25,11 @@
         </div>
         <script src="script.js"></script>
         <div id="meta-panel">
+
+          <div id="loading" class='hi'>
+            <img id="loading-image" src="ajax-loader.gif" />
+          </div>
+
           <!--
           <a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         -->
